[project]
name = "mc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deep-translator>=1.11.4",
    "fastapi-mcp>=0.4.0",
    "fastapi[standard]>=0.117.1",
    "fastmcp>=2.12.4",
    "googletrans>=4.0.2",
    "httpx>=0.28.1",
    "openai>=1.109.1",
    "sseclient>=0.0.27",
    "uvicorn>=0.37.0",
]
